Fix wrong truncate logic of the ICO card's content

--- a/client/stylesheets/icoCard.scss
+++ b/client/stylesheets/icoCard.scss
@@ -88,7 +88,15 @@ $logo-image-margin-right: 20px;
     line-height: 1.5;
     color: #666d7c;
     margin-bottom: 20px;
+    height: 90px;
     padding: 0 $card-horizontal-padding;
+  }
+
+  .content-text-wrapper {
+    line-height: 22.5px;
+    height: 100%;
+    white-space: pre-wrap;
+    word-break: break-all;
   }
 
   .link-buttons-wrapper {
@@ -145,6 +153,8 @@ $logo-image-margin-right: 20px;
   }
 
   .ico-card-item-modal-link {
+    display: block;
+    height: 100%;
     cursor: pointer;
   }
 
